--- a/404.html
+++ b/404.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8" />
-
-  <title>FABRIC KNIT Workshop 404</title>
-
-  <script>
-    sessionStorage.redirect = location.href;
-  </script>
-
-  <meta http-equiv="refresh" content="0;URL='/knit-website'"></meta>
+    <meta charset="UTF-8">
+    <title>FABRIC KNIT Workshop 404</title>
+    <script>
+        sessionStorage.redirect = location.href;
+    </script>
+    <meta http-equiv="refresh" content="0;URL='/knit-website'">
 </head>
-
 <body>
-  <!-- The purpose of this file is only for deployment at gh pages. -->
+<!--Format of file took me here: https://www.smashingmagazine.com/2016/08/sghpa-single-page-app-hack-github-pages/-->
+<!--512 MAGICAL BYTES #-->
 
+<!--This is, hands down, one of the strangest quirks I have ever encountered in web development. You must ensure that the-->
+<!--total size of your 404.html page is greater than 512 bytes, because if it isn’t, Internet Explorer will disregard it and-->
+<!--show a generic browser 404 page instead. When I finally figured this out, I had to crack open a beer to cope with the-->
+<!--amount of time it took.-->
 </body>
-
-
 </html>
