--- a/404.html
+++ b/404.html
@@ -6,7 +6,8 @@
     <script>
         sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='/knit-website'">
+<!--    <meta http-equiv="refresh" content="0;URL='/knit-website'">-->
+    <meta http-equiv="refresh" content="0;URL='/'">
 </head>
 <body>
 <!--Format of file took me here: https://www.smashingmagazine.com/2016/08/sghpa-single-page-app-hack-github-pages/-->
