Revert "Merge pull request #29 from fabric-testbed/update/develop"
This reverts commit b19e90d9e23f47d62110696c4238f2bafc486d22, reversing
changes made to c247349e34f4b43d5600e3120f097e70309acfe4.

--- a/src/404.html
+++ b/src/404.html
@@ -7,14 +7,10 @@
   <title>FABRIC KNIT Workshop 404</title>
 
   <script>
-    const path = location.pathname.substr(1);
-    if (path && path !== '') {
-      location.replace('/#/' + path);
-      window.alert("path", path, "pathname", location.pathname)
-    } else {
-      location.replace('/#/');
-    }
+    sessionStorage.redirect = location.href;
   </script>
+
+  <meta http-equiv="refresh" content="0;URL='/'"></meta>
 </head>
 
 <body>
